fixed gallery message alignment

--- a/css/components/_gallery.scss
+++ b/css/components/_gallery.scss
@@ -59,3 +59,9 @@
 		object-fit: cover;
 	}
 }
+
+.gallery__message {
+	width: 100%;
+	text-align: center;
+	display: inline-block;
+}
